[maud] Fix action buttons align

--- a/app/javascript/styles/mods/legacy-style.scss
+++ b/app/javascript/styles/mods/legacy-style.scss
@@ -120,4 +120,8 @@
         margin: 0 -8px;
         padding-top: 12px;
     }
+
+    .status__action-bar__button-wrapper {
+        flex-grow: 0;
+    }
 }
