--- a/app/javascript/styles/mods/compact-padding.scss
+++ b/app/javascript/styles/mods/compact-padding.scss
@@ -37,4 +37,8 @@
   .notification__message {
     padding: 12px 12px 0;
   }
+
+  .status__action-bar__button-wrapper {
+    flex-grow: 0;
+  }
 }
